Add chrdev support

--- a/intr/Makefile
+++ b/intr/Makefile
@@ -1,5 +1,5 @@
 obj-m += axi_intrs.o
-axi_intrs-objs := axi_intr.o
+axi_intrs-objs := axi_intr.o empty.o
 
 KERN_DIR := $(KERNEL_DIR)
 
@@ -9,3 +9,7 @@ all:
 
 clean:
 	make -C $(KERN_DIR) M=$(PWD) clean
+	rm app
+
+app: app_intr.o
+	arm-linux-gnueabihf-gcc app_intr.c -o app
