Modify Makefile architecture

--- a/mpu6050/Makefile
+++ b/mpu6050/Makefile
@@ -1,17 +1,14 @@
-obj-m +=  my_mpu6050.o
 
-#mpu6050_core.o 
-#atk_ms6050/atk_ms6050.o 
+SHELL = /bin/bash
 
-my_mpu6050-objs := mpu6050.o mpu6050_i2c.o mpu6050_config.o  \
-				   mpu6050_chrdev.o 
-				
-				   
+CC=$(CROSS_COMPILE)gcc -g
+
+OUTPUT_DIR?=output
+
+include example/example.mk
 
 
-KERN_DIR := $(KERNEL_DIR)
+.PHONY: all $(OUTPUT_DIR)
 
-all:
-	make ARCH=arm CROSS_COMPILE=arm-linux-gnueabihf- -C$(KERN_DIR) M=$(PWD) modules
-clean:
-	make -C $(KERNEL_DIR) M=$(PWD) clean
+$(OUTPUT_DIR):
+	@mkdir -p $(OUTPUT_DIR)
